# torrent-tracker

./: .gitignore  Cargo.toml  cSpell.json
.cargo/: config.toml
.github/workflows/: coverage.yaml  deployment.yaml  generate_coverage.yaml  generate_coverage_pr.yaml  testing.yaml  upload_coverage.yaml  upload_coverage_pr.yaml
console/tracker-client/: Cargo.toml  README.md
console/tracker-client/src/console/clients/checker/checks/: http.rs  udp.rs
console/tracker-client/src/console/clients/http/: app.rs  mod.rs
console/tracker-client/src/console/clients/udp/: app.rs  checker.rs  mod.rs
contrib/bencode/: Cargo.toml
contrib/bencode/src/: lib.rs
share/default/config/: tracker.udp.benchmarking.toml
src/: app.rs  app_test.rs  container.rs  lib.rs  main.rs
src/bootstrap/: app.rs  logging.rs
src/bootstrap/jobs/: http_tracker.rs  torrent_cleanup.rs  tracker_apis.rs  udp_tracker.rs
src/console/: mod.rs  profiling.rs
src/core/: announce_handler.rs  auth.rs  core_tests.rs  error.rs  mod.rs  scrape_handler.rs  statistics.rs
src/core/auth/: key.rs
src/core/authentication/: handler.rs  key.rs  mod.rs  service.rs
src/core/databases/: driver.rs  mod.rs  mysql.rs  sqlite.rs
src/core/services/: mod.rs  torrent.rs
src/core/statistics/: keeper.rs  metrics.rs  mod.rs  repository.rs  services.rs  setup.rs
src/core/torrent/: manager.rs  mod.rs  services.rs
src/core/whitelist/: authorization.rs  in_memory.rs  manager.rs  mod.rs  persisted.rs  setup.rs  whitelist_tests.rs
src/servers/: logging.rs
tests/common/: fixtures.rs  logging.rs
(+108 files in other folders)
