[package]
description = "A collection of console clients to make requests to BitTorrent trackers."
keywords = ["bittorrent", "client", "tracker"]
license = "LGPL-3.0"
name = "torrust-tracker-client"
readme = "README.md"

authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
aquatic_udp_protocol = "0"
bittorrent-primitives = "0.1.0"
bittorrent-tracker-client = { version = "3.0.0-develop", path = "../../packages/tracker-client" }
clap = { version = "4", features = ["derive", "env"] }
futures = "0"
hex-literal = "0"
hyper = "1"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_bencode = "0"
serde_bytes = "0"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
torrust-tracker-configuration = { version = "3.0.0-develop", path = "../../packages/configuration" }
tracing = "0"
tracing-subscriber = { version = "0", features = ["json"] }
url = { version = "2", features = ["serde"] }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
